--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <title>Document</title>
 
     <script src="jquery.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://appchatan.herokuapp.com/socket.io/socket.io.js"></script>
     <script src="handle.js"></script>
     <link rel="stylesheet" type="text/css" href="layout.css">
 
